--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "JobMashPort",
-  "version": "1.0.0",
+  "name": "jobapp",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
+    "bower": "^1.4.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
