--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
     "angular-route": "~1.4.0",
-    "angular": "~1.4.1"
+    "angular": "~1.4.1",
+    "bootstrap": "~3.3.5",
+    "moment": "~2.10.3"
   }
 }
