--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-route": "~1.4.0",
     "angular": "~1.4.1",
     "bootstrap": "~3.3.5",
-    "moment": "~2.10.3"
+    "moment": "~2.10.3",
+    "jquery": "~2.1.4"
   }
 }
