--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular": "~1.4.1",
     "bootstrap": "~3.3.5",
     "moment": "~2.10.3",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular-moment": "~0.10.1"
   }
 }
